Phase 7.2 WIP: map+inject architecture for 2D + 3D gear items
Refactor 7.2b/c away from CMD-predicate registration toward a unified
Backend-driven item_model rewrite. Predicate-based lookup failed in
practice (V1/V2 conflicts with nitrosetups under minecraft:paper,
predicates never evaluated), and 3D gear has no custom_model_data
component at all — EM sets item_model = elitemobs:gear/<name> instead.

Geyser-Extension now registers every EM item with
  def.model() = bedrockId = geyser_custom:em_<name>, no predicates.
This places our defs in an exclusive multimap bucket — no contention
with other extensions.

Backend PacketInterceptor maintains two maps:
- emItemModelMap: (material, cmd) -> bedrockKey  (2D items)
- emGearModelMap: (material, java item_model)    (3D gear)
For Bedrock players it overwrites item_model on matching inventory
items to geyser_custom:em_<name>, so Geyser's CustomItemTranslator
finds the def via a 1:1 multimap key match.

EMGearItem gains a javaItemModel field carrying the EM model
identifier as written in the EM resource pack (e.g. "elitemobs:gear/
bronze_sword"); the scanner populates it from override.model.

Status: 2D items (Bag of Coins, Question Mark) verified rendering
on Bedrock. 3D gear deployed but in-game verification pending.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>